--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         </div>
         <div class="desc">
             <h3>Full Stack Developer</h3>
-            <p>Dec 2025 - present</p>
+            <p>2026 - present</p>
         </div>
       </div>
     </div>
@@ -213,11 +213,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Thuy Loi University</h2>
+          <h2>Web Company</h2>
         </div>
         <div class="desc">
             <h3>Full-Stack Developer | Internship</h3>
-            <p>June 2025 - Dec 2025</p>
+            <p>2025 - 2026</p>
         </div>
       </div>
     </div>
@@ -228,8 +228,8 @@
           <h2>Thuy Loi University</h2>
         </div>
         <div class="desc">
-            <h3> Backend Developer | Student</h3>
-            <p>Feb 2025 - June 2025</p>
+            <h3> Web Beginner | Student</h3>
+            <p>2022 - 2024</p>
         </div>
       </div>
     </div>
@@ -237,11 +237,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Thuy Loi University</h2>
+          <h2>Tran Hung Dao High School</h2>
         </div>
         <div class="desc">
-            <h3>Frontend Developer | Student</h3>
-            <p>Sep 2024 - Jan 2025</p>
+            <h3>Student</h3>
+            <p>2020 - 2022</p>
         </div>
       </div>
     </div>
@@ -249,11 +249,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>AThuy Loi University</h2>
+          <h2>Thanh Xuan Nam Secondary School</h2>
         </div>
         <div class="desc">
-            <h3>Advanced Coding | Student</h3>
-            <p> Jan 2024 - June 2024</p>
+            <h3>Student</h3>
+            <p>2016 - 2020</p>
         </div>
       </div>
     </div>
@@ -261,11 +261,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Thuy Loi University</h2>
+          <h2>Thanh Xuan Nam Elementary School</h2>
         </div>
         <div class="desc">
-            <h3>Learning C - Student</h3>
-            <p>Sep 2023 - Jan 2024</p>
+            <h3>Student</h3>
+            <p>2011 - 2016</p>
         </div>
       </div>
     </div>
@@ -395,6 +395,8 @@
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
 
 <script src="./assets/js/script.js"></script>
+
+<script src="./projects.json"></script>
 
 </body>
 </html>
