--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
 <script src="./assets/js/script.js"></script>
 
-<script src="./projects.json"></script>
+<script src="./projects/projects.json"></script>
 
 </body>
 </html>
