Update (idk why the pics dont show :(( )

--- a/index.html
+++ b/index.html
@@ -394,9 +394,7 @@
 
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
 
-<script src="./assets/js/script.js"></script>
-
-<script src="./projects/projects.json"></script>
+<script src="/assets/js/script.js"></script>
 
 </body>
 </html>
