--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
 
-<script src="/assets/js/script.js"></script>
+<script src="./assets/js/script.js"></script>
 
 </body>
 </html>
