--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
   <div class="box-container">
 
-    <div class="box tilt">
+    <!--div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
       <div class="content">
         <div class="tag">
@@ -178,7 +178,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </-div> -->
 
 </div>
 
